--- a/Kwetter/src/main/webapp/home.xhtml
+++ b/Kwetter/src/main/webapp/home.xhtml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+
+    <h:head>
+    </h:head>
+    <h:body>
+        <h:form>   
+            <p:tabMenu activeIndex="#{param.i}">
+                <p:menuitem value="Home" outcome="/home" icon="ui-icon-star">
+                    <f:param name="i" value="0" />
+                </p:menuitem>
+                <p:menuitem value="Admin" outcome="/admin" icon="ui-icon-wrench">
+                    <f:param name="i" value="1" />
+                </p:menuitem>
+            </p:tabMenu>
+        </h:form>
+    </h:body>
 </html>
+
