--- a/Kwetter/src/main/webapp/login.xhtml
+++ b/Kwetter/src/main/webapp/login.xhtml
@@ -21,6 +21,14 @@
     </h:head>
     <h:body>
         <h:form>   
+             <p:tabMenu activeIndex="#{param.i}">
+            <p:menuitem value="Home" outcome="/home" icon="ui-icon-star">
+                <f:param name="i" value="0" />
+            </p:menuitem>
+            <p:menuitem value="Admin" outcome="/admin" icon="ui-icon-wrench">
+                <f:param name="i" value="1" />
+            </p:menuitem>
+        </p:tabMenu>
             <p:growl id="growl" sticky="true" showDetail="true" life="3000" />
             <p:dialog header="Login" widgetVar="dlg" visible="true" resizable="false">
                 <h:panelGrid columns="2" cellpadding="5">
