--- a/Kwetter/src/main/webapp/login.xhtml
+++ b/Kwetter/src/main/webapp/login.xhtml
@@ -5,18 +5,6 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-
-    <script type="text/javascript">
-        function handleLoginRequest(xhr, status, args) {
-            if (args.validationFailed || !args.loggedIn) {
-                PF('dlg').jq.effect("shake", {times: 5}, 100);
-            } else {
-                PF('dlg').hide();
-                $('#loginLink').fadeOut();
-            }
-        }
-    </script>
-
     <h:head>
     </h:head>
     <h:body>
@@ -32,7 +20,7 @@
                     <p:password id="password" value="#{login.password}" required="true" label="password" />
 
                     <f:facet name="footer">
-                        <p:commandButton value="Login" update="growl" actionListener="#{login.login}" oncomplete="handleLoginRequest(xhr, status, args)" />
+                        <p:commandButton value="Login" update="growl" action="#{login.login}" ajax="false" />
                     </f:facet>  
                 </h:panelGrid>
             </p:dialog>
