--- a/Kwetter/src/main/webapp/admin.xhtml
+++ b/Kwetter/src/main/webapp/admin.xhtml
@@ -39,6 +39,20 @@
                 </p:column>
             </p:dataTable>
             <p:commandButton value="Update" actionListener="#{admin.onRoleChange}"/>
+            <p:dataTable var="message" value="#{admin.messages}">
+                <p:column headerText="Eigenaar">
+                    <h:outputText value="#{message.poster}" />
+                </p:column>
+                <p:column headerText="Content">
+                    <h:outputText value="#{message.content}" />
+                </p:column>
+                 <p:column headerText="Flagged">
+                    <h:outputText value="#{message.flags.size()}" />
+                </p:column>
+                 <p:column headerText="Delete">
+                    <p:commandButton value="Delete" actionListener="#{admin.onMessageDelete}"/>
+                </p:column>
+            </p:dataTable>
         </h:form>
     </h:body>
 </html>
